--- a/src/main/webapp/pages/tutorHome.html
+++ b/src/main/webapp/pages/tutorHome.html
@@ -1,60 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home</title>
+    <title>Search</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../stylesheets/style.css">
     <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $(".course-button").click(function (e) {
-                $.get("/tutor/register", { courseId: parseInt($(".courseId").val()) } );
-            });
-        });
-    </script>
 </head>
 <body>
 <div class="logo-container">
-    <div class="text-center">
-        <img class="logo" src="../img/logo.png">
+    <div class="student-logo-container">
+        <img class="student-logo" src="../img/logo.png">
     </div>
-</div>
-<div class="background-container">
-    <div class="container tutor-page-conteiner">
-        <div class="panel panel-default home-page-panel">
-            <div class="panel-body">
-                <div class="row">
-                    <div class="span2"><img src="../img/man-tutor.gif" class="img-rounded avatar" alt="profile photo"></div>
-                    <div class="span4">
-                        <div style="width: 100%"><p class="profile-text">name</p></div>
-                        <div style="width: 100%"><p class="profile-text">email</p></div>
-                    </div>
-                </div>
-
-                <div class="row"><div class="text-center"><h3 class="profile-text">Courses</h3></div></div>
-
-                <hr/>
-                    <div class="panel panel-default home-page-panel">
-                        <div class="panel-body">
-                            <div class="status inprogress"></div>
-                        <div class="course-container">
-                            <p class="course-text">name</p>
-                            <p class="course-text">Students</p>
-                            <form action="/tutor" method="post" style="margin-bottom: 0; display: none">
-                                <input type="hidden" name="courseId" class="courseId" value="4">
-                            </form>
-                            <button type="button" class="course-button btn btn-info" >
-                                <span style="margin-right: 5px;">Register</span><span class="glyphicon glyphicon-th-list"></span>
-                            </button>
-                            <button class="course-button btn btn-info">More</button>
-                        </div>
-                    </div>
-            </div>
+    <div id="navbar">
+        <div class="navbar-button">
+            <span class="glyphicon glyphicon-home"></span>
+            <a href="/student">Home</a>
+        </div>
+        <div class="navbar-button">
+            <span class="glyphicon glyphicon-search"></span>
+            <a href="/student/search">Search</a>
         </div>
     </div>
 </div>
+<div class="background-container">
+    <div class="register-container">
+        <div class="sortFilterPanel"></div>
+        <div class="panel panel-default home-page-panel">
+            <div class="panel-body">
+                <div class="status started"></div>
+                <div class="course-container">
+                    <p class="course-text">Coursename</p>
+                    <p class="course-text">120 students</p>
+                    <!-- if(course.status!=start) add button register-->
+                    <button class="course-button btn btn-success">Enroll</button>
+                    <button class="course-button btn btn-info">More</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
